# pyCrossVA

./: .gitignore  .travis.yml  Guide for data entry.xlsx  MANIFEST.in  README.md  Readme.rst  appveyor.yml  configuration.py  mappings.py  odkDownload.csv  pyproject.toml  requirements.txt  setup.py  tox.ini  transform.py  utils.py  validation.py  who_va_output.csv
docs/: Makefile  conf.py  config.rst  make.bat
docs/_build/doctrees/: about.doctree  config.doctree  environment.pickle  index.doctree
docs/_build/doctrees/source/: configuration.doctree  mappings.doctree  modules.doctree  pycrossva.doctree  tests.doctree  transform.doctree  utils.doctree  validation.doctree
docs/_build/html/: .buildinfo  about.html  config.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: configuration.html  index.html  mappings.html  transform.html  utils.html  validation.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/source/: configuration.html  mappings.html  modules.html  pycrossva.html  tests.html  transform.html  utils.html  validation.html
docs/source/: modules.rst  transform.rst  validation.rst
pycrossva/: __init__.py  __version__.py  configuration.py  mappings.py  transform.py  utils.py  validation.py
pycrossva/resources/mapping_configuration_files/: 2012WHO_to_InSilicoVA.csv  2012WHO_to_InterVA4.csv  2012WHO_to_InterVA5.csv  2016WHOv141_to_InSilicoVA.csv  2016WHOv141_to_InSilicoVA_2012.csv  2016WHOv141_to_InterVA5.csv  2016WHOv151_to_InSilicoVA.csv  2016WHOv151_to_InSilicoVA_2012.csv  2016WHOv151_to_InterVA5.csv  2021WHO_to_InSilicoVA.csv  2021WHO_to_InterVA5.csv  2022WHOv0101_to_InSilicoVA_2022.csv  2022WHOv0101_to_InterVA_2022.csv  PHMRCShort_to_InterVA5.csv  PHRMCShort_to_InsillicoVA.csv  PHRMCShort_to_InterVA5.csv  readme.rst  ~$2012InterVA5_Work.xlsx
pycrossva/resources/sample_data/: 2012WHO_mock_data_1.csv  2016WHO_bad_data_1.csv  2016WHO_mock_data_1.csv  2016WHO_mock_data_2.csv  Mock_PHRMC_Data.csv  PHRMC_mock_data_1.csv  mock_data_2.csv  test_data1.csv  test_data2.csv  va_who_2022.csv  va_who_2022_2.csv  va_who_2022_3.csv  va_who_2022_4.csv
pycrossva/scripts/: pycrossva_transform.py
resources/mapping_configuration_files/: 2012WHO_to_InterVA.csv  2012WHO_to_InterVA5.csv  2012WHO_to_InterVA5.xlsx  2012WHO_to_InterVA_AnnotatedWorkUp.csv  2016WHOv141_to_InsillicoVA.csv  2016WHOv141_to_InterVA5.csv  2016WHOv151_to_InsillicoVA.csv  2016WHOv151_to_InterVA4.csv  2016WHOv151_to_InterVA5.csv  example_config_1.csv  example_config_2.csv  readme.rst
resources/sample_data/: mock_data_1.csv  mock_data_2016WHO151.csv
scripts/: pycrossva-transform.py
(+9 files in other folders)
